--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <title>Webmaster:3</title>
+  <meta charset="UTF-8" />
+  <title>Noorani</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>NOORANI???</p>
+  <p>NOORANI</p>
+  <div class="footer">
+      <div class ="socialMedia-container">
+      <img src="images/facebook.png" alt="Facebook Icon"/>
+      <img src="images/instagram.png" alt="Instagram Icon" />
+      <img src="images/youtube.png" alt="Youtube Icon" />
+      <img src="images/Email.png" alt="Email Icon" />
+      </div>
+      <p>© NOORANI 2025. No rights reserved.</p>
+  </div>
 </body>
 </html>
