--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noorani</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
+
+    <!-- favicon: -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    
 </head>
 <body>
 
@@ -17,7 +25,7 @@
     </div>
 
     <!-- Fading Text -->
-    <div class="overlay">Noorani</div>
+    <div class="overlay"><b><h1>Noorani</b></h1></div>
 
 </body>
 </html>
