--- a/index.html
+++ b/index.html
@@ -3,58 +3,212 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Navbar</title>
+    <title>Noorani - Navigation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Plant Growth Animation */
-        @keyframes grow {
-            0% {
-                transform: scaleY(0);
-                opacity: 0;
-            }
-            100% {
-                transform: scaleY(1);
-                opacity: 1;
-            }
+        :root {
+            --dark-green: #093C34;
+            --teal: #447C74;
+            --light-cream: #F3E2C4;
         }
 
-        .plant {
-            transform-origin: bottom;
-            animation: grow 1.5s ease-out forwards;
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Inter', sans-serif;
         }
 
-        /* Navbar Fade-In */
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-                transform: translateY(-10px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
+        /* Body Styling */
+        body {
+            background-color: #020;
+            color: var(--light-cream);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
+        /* Navbar Styling */
         .navbar {
-            opacity: 0;
-            animation: fadeIn 1s ease-out 1.5s forwards;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 11vh;
+            background-color: transparent; /* Initial transparent navbar */
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.8rem 2rem;
+            z-index: 1000;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease; /* Smooth transition for background color */
         }
+
+        /* Logo Styling */
+        .logo {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: var(--light-cream);
+            letter-spacing: 1px;
+        }
+
+        /* Navigation Links */
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-links a {
+            color: var(--light-cream);
+            text-decoration: none;
+            font-size: 1rem;
+            font-weight: 500;
+            position: relative;
+            transition: color 0.3s ease-in-out;
+        }
+
+        /* Hover Animation */
+        .nav-links a::after {
+            content: "";
+            position: absolute;
+            left: 50%;
+            bottom: -4px;
+            width: 0;
+            height: 2px;
+            background: var(--teal);
+            transition: width 0.3s ease-in-out;
+            transform: translateX(-50%);
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
+        }
+
+        .nav-links a:hover {
+            color: var(--teal);
+        }
+
+        /* Mobile Menu Button */
+        .menu-btn {
+            font-size: 2rem;
+            color: var(--light-cream);
+            cursor: pointer;
+            display: none;
+        }
+
+        /* Responsive Menu Styling */
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                background-color: var(--dark-green);
+                position: absolute;
+                top: 60px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 90%;
+                text-align: center;
+                padding: 1rem;
+                border-radius: 15px;
+                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            }
+
+            .nav-links.active {
+                display: flex;
+            }
+
+            .menu-btn {
+                display: block;
+            }
+        }
+
+        /* Page Content */
+        .content {
+            margin-top: 120px;
+            text-align: center;
+            max-width: 800px;
+        }
+
+        .content h1 {
+            font-size: 3rem;
+            font-weight: bold;
+            color: var(--light-cream);
+        }
+
+        .content p {
+            font-size: 1.2rem;
+            color: var(--light-cream);
+            margin-top: 10px;
+        }
+
+        /* Extra content for scrolling */
+        .scroll-content {
+            width: 100%;
+            height: 2000px; /* Large enough to make the page scroll */
+            background-color: #1d1d1d;
+            text-align: center;
+            color: var(--light-cream);
+            padding: 50px 0;
+        }
+
+        .scroll-content h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        .scroll-content p {
+            font-size: 1.2rem;
+            margin-top: 10px;
+        }
+
     </style>
 </head>
-<body class="bg-gray-900 text-white flex flex-col items-center justify-center h-screen">
-
-    <!-- SVG Plant -->
-    <svg class="plant w-16 h-16 mb-4" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M50 100C45 65 35 45 10 50C30 25 40 30 50 10C60 30 70 25 90 50C65 45 55 65 50 100Z" fill="green"/>
-    </svg>
+<body>
 
     <!-- Navbar -->
-    <nav class="navbar bg-gray-800 p-4 rounded-lg shadow-lg flex space-x-6">
-        <a href="#" class="hover:text-green-400 transition">Home</a>
-        <a href="#" class="hover:text-green-400 transition">Menu</a>
-        <a href="#" class="hover:text-green-400 transition">About</a>
-        <a href="#" class="hover:text-green-400 transition">Contact</a>
+    <nav class="navbar">
+        <div class="logo">Noorani</div>
+        <div class="nav-links">
+            <a href="#">Home</a>
+            <a href="#">Menu</a>
+            <a href="#">About</a>
+            <a href="#">Takeout</a>
+            <a href="#">Contact</a>
+        </div>
+        <div class="menu-btn">&#9776;</div>
     </nav>
+
+    <!-- Page Content -->
+    <div class="content">
+        <h1>Welcome to Noorani</h1>
+        <p>Where Every Bite is a Ray of Delight</p>
+    </div>
+
+    <!-- Scrollable Content -->
+    <div class="scroll-content">
+        <h2>Scroll Down to See the Navbar Change</h2>
+        <p>This is just random content. KEEP SCROLLING!!!</p>
+    </div>
+
+    <script>
+        // Toggle Mobile Menu
+        document.querySelector('.menu-btn').addEventListener('click', () => {
+            document.querySelector('.nav-links').classList.toggle('active');
+        });
+
+        // Change navbar background color on scroll
+        window.addEventListener('scroll', () => {
+            const navbar = document.querySelector('.navbar');
+            if (window.scrollY > 10) {
+                navbar.style.backgroundColor = 'var(--dark-green)'; // solid color when scrolled
+            } else {
+                navbar.style.backgroundColor = 'transparent'; // transparent when at top
+            }
+        });
+    </script>
 
 </body>
 </html>
