--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
         <div class="menu-btn">&#9776;</div>
     </nav>
 
-   <!-- Circle Animation -->
-<div class="circle-container">
-    <div class="circle"></div>
-</div>
+    <!-- Page Content -->
+   
 
 
     <!--<script>
@@ -68,10 +66,11 @@
         });
     </script>-->
 
+    <script type="text/javascript" src="script.js"></script>
 </body>
    
 <!-- favicon: -->
 
-<script type="text/javascript" src="script.js"></script>
+
 
 </html>
