--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
   <div class="overlay">
     <h1><b>Noorani</b></h1>
   </div>
-
-  <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">Noorani</div>
     <div class="nav-links">
@@ -39,24 +37,31 @@
       <a href="#">About</a>
       <a href="#">Takeout</a>
       <a href="#">Contact</a>
-      <a href="farm-to-table.html">Farm to Table Process</a>
+      <a href="farm-to-table.html">Farm to Table</a>
     </div>
     <div class="menu-btn">&#9776;</div>
   </nav>
-
-  <!-- Page Content -->
-
-  <!-- Footer -->
-  <div class="footer">
-    <div class="socialMedia-container">
-      <img src="footer/facebook.png" alt="Facebook Icon" />
-      <img src="footer/instagram.png" alt="Instagram Icon" />
-      <img src="footer/youtube.png" alt="Youtube Icon" />
-      <img src="footer/Email.png" alt="Email Icon" />
+  
+  <!-- Improved Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-logo">Noorani</div>
+      <div class="footer-links">
+        <a href="#">Home</a>
+        <a href="#">Menu</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="socialMedia-container">
+        <img src="footer/facebook.png" alt="Facebook">
+        <img src="footer/instagram.png" alt="Instagram">
+        <img src="footer/youtube.png" alt="YouTube">
+        <img src="footer/email.png" alt="Email">
+      </div>
+      <p>© Noorani 2025. All rights reserved.</p>
     </div>
-    <p>© NOORANI 2025. No rights reserved.</p>
-  </div>
-
+  </footer>
+  
   <!-- JavaScript -->
   <script type="text/javascript" src="script.js"></script>
 </body>
