--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
-      <div class="footer-logo">Noorani</div>
+      <div class="footer-logo">
+        <img src="images/logowbackground.png" alt="Noorani Logo" class="logo-img">
+      </div>
       <div class="footer-links">
         <a href="#">Home</a>
         <a href="#">Menu</a>
@@ -84,10 +86,10 @@
         <a href="#">Contact</a>
       </div>
       <div class="socialMedia-container">
-        <img src="footer/facebook.png" alt="Facebook">
-        <img src="footer/instagram.png" alt="Instagram">
-        <img src="footer/youtube.png" alt="YouTube">
-        <img src="footer/email.png" alt="Email">
+        <a href="#"><img src="footer/facebook.png" alt="Facebook" class="social-icon"></a>
+        <a href="#"><img src="footer/instagram.png" alt="Instagram" class="social-icon"></a>
+        <a href="#"><img src="footer/youtube.png" alt="YouTube" class="social-icon"></a>
+        <a href="#"><img src="footer/email.png" alt="Email" class="social-icon"></a>
       </div>
       <p>© Noorani 2025. All rights reserved.</p>
     </div>
