nav bar jumps to our roots

--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
         </div>
     </section>
     
-    <!-- Navbar -->
-    <nav class="navbar">
-        <div class="logo-container" style="display: flex; align-items: center;">
-            <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;"> <!-- Adjust height as needed -->
-            <div class="logo">Noorani</div>
-        </div>
-        <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">About</a>
-            <a href="#">Takeout</a>
-            <a href="#">Contact</a>
-            <a href="farm-to-table.html">Farm to Table Process</a>
-        </div>
-        <div class="menu-btn">&#9776;</div>
-    </nav>
+  <!-- Navbar -->
+<nav class="navbar">
+    <div class="logo-container" style="display: flex; align-items: center;">
+        <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
+        <div class="logo">Noorani</div>
+    </div>
+    <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">Menu</a>
+        <a href="#">About</a>
+        <a href="#">Takeout</a>
+        <a href="#">Contact</a>
+        <a href="#our-roots">Our Roots</a>
+    </div>
+    <div class="menu-btn">&#9776;</div>
+</nav>
 
     <!-- Split Layout Section -->
-    <section class="split-section">
+    <section class="split-section" id="our-roots"> <!-- Added ID -->
         <div class="split-image">
             <img src="assets/emptyplace.jpg" alt="Empty Restaurant">
         </div>
@@ -83,8 +83,8 @@
             <div class="footer-links">
                 <a href="#">Home</a>
                 <a href="#">Menu</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="#our-roots">Our Roots</a> <!-- Updated link -->
+                <a href="#">Reserve</a>
             </div>
             <div class="socialMedia-container">
                 <a href="#"><img src="footer/facebook.png" alt="Facebook" class="social-icon"></a>
@@ -92,8 +92,8 @@
                 <a href="#"><img src="footer/youtube.png" alt="YouTube" class="social-icon"></a>
                 <a href="#"><img src="footer/email.png" alt="Email" class="social-icon"></a>
             </div>
-            <p>© Noorani 2025. All rights reserved.</p>
         </div>
+        <p>© Noorani 2025. All rights reserved.</p>
     </footer>
 
     <script type="text/javascript" src="script.js"></script>
