--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <a href="#">Menu</a>
             <a href="#">About</a>
             <a href="#">Takeout</a>
+            <a href="reservations.html">Reservations</a>
             <a href="#">Contact</a>
             <a href="farm-to-table.html">Farm to Table Process</a>
         </div>
