--- a/reservations.html
+++ b/reservations.html
@@ -96,9 +96,8 @@
       const [showSeatSelector, setShowSeatSelector] = useState(false);
       const [bookFullTable, setBookFullTable] = useState(false);
 
-      // Available time slots
-      const timeSlots = ['17:00', '17:30', '18:00', '18:30', '19:00', '19:30', '20:00', '20:30', '21:00', '21:30'];
-
+      // Available time slots in EST
+      const timeSlots = ['11:00 AM', '12:00 PM', '1:00 PM', '2:00 PM', '03:00 PM', '04:00 PM', '05:00 PM', '06:00 PM', '07:00 PM', '08:00 PM', '09:00 PM', '10:00 PM'];
       // Restaurant tables configuration with seats
       const tables = [
         { 
