--- a/reservations.html
+++ b/reservations.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Noorani Reservation System</title>
+  <title>Noorani Reservation System :3</title>
   
    <!-- Favicon Links -->
    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -132,7 +132,7 @@
           y: 50, 
           seats: 4, 
           available: false, 
-          shape: 'rect', 
+          shape: 'rect',
           width: 80, 
           height: 40,
           seatPositions: [
