--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noorani</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Noorani</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -45,16 +45,14 @@
             <a href="#">About</a>
             <a href="#">Takeout</a>
             <a href="#">Contact</a>
-            <a href="our-roots.html">Our Roots</a>
+            <a href="farm-to-table.html">Farm to Table Process</a>
         </div>
         <div class="menu-btn">&#9776;</div>
     </nav>
 
     <!-- Split Layout Section -->
-
-        
-
-    <section class="split-section" id="our-roots">
+    <section class="split-section">
+     
         <div class="split-image">
             <img src="assets/emptyplace.jpg" alt="Empty Restaurant">
         </div>
