new better rendition

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div class="nav-links">
         <a href="#">Home</a>
         <a href="#">Menu</a>
+        <a href="farm-to-table.html">Farm-to-Table</a>
         <a href="#">About</a>
         <a href="#">Takeout</a>
         <a href="#">Contact</a>
@@ -86,6 +87,7 @@
             <div class="footer-links">
                 <a href="#">Home</a>
                 <a href="#">Menu</a>
+                <a href="farm-to-table.html">Farm-to-Table</a>
                 <a href="#our-roots">Our Roots</a>
                 <a href="#">Reserve</a>
             </div>
