--- a/index.html
+++ b/index.html
@@ -9,151 +9,178 @@
   <script src="script.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Favicon Links -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicon Links -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
-    <!-- Video Background Section -->
-    <section class="hero-section">
-        <div class="video-container">
-            <video autoplay muted loop>
-                <source src="assets/homepage.mp4" type="video/mp4">
-            </video>
-        </div>
+  <!-- Video Background Section -->
+  <section class="hero-section">
+    <div class="video-container">
+      <video autoplay muted loop>
+        <source src="assets/homepage.mp4" type="video/mp4">
+      </video>
+    </div>
 
-        <!-- Fading Text -->
-        <div class="overlay">
-            <h1><span class="tropikal-font fade-in-title">Noorani</span></h1> <!--Check-->
-            <p class="subtext fade-in-subtext">Where Every Bite is a Ray of Delight</p>
-        </div>
-    </section>
+    <!-- Fading Text (Logo removed as requested) -->
+    <div class="overlay">
+      <h1><span class="tropikal-font fade-in-title">Noorani</span></h1>
+      <p class="subtext fade-in-subtext">Where Every Bite is a Ray of Delight</p>
+    </div>
+  </section>
 
-    
   <!-- Navbar -->
-<nav class="navbar">
+  <nav class="navbar">
     <div class="logo-container" style="display: flex; align-items: center;">
-        <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
-        <div class="logo">Noorani</div>
+      <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
+      <div class="logo">Noorani</div>
     </div>
     <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">Menu</a>
-        <a href="farm-to-table.html">Farm-to-Table</a>
-        <a href="#">About</a>
-        <a href="#">Takeout</a>
-        <a href="#">Contact</a>
-        <a href="#our-roots">Our Roots</a>
+      <a href="#">Home</a>
+      <a href="#">Menu</a>
+      <a href="farm-to-table.html">Farm-to-Table</a>
+      <a href="#">About</a>
+      <a href="#">Takeout</a>
+      <a href="contact.html">Contact</a>
+      <a href="#our-roots">Our Roots</a>
     </div>
     <div class="menu-btn">&#9776;</div>
-</nav>
+  </nav>
 
-    <!-- Split Layout Section -->
-    <section class="split-section" id="our-roots"> <!-- Added ID -->
+  <!-- Split Layout Section -->
+  <section class="split-section" id="our-roots">
+    <div class="split-image">
+      <img src="assets/emptyplace.jpg" alt="Empty Restaurant">
+    </div>
 
-        <div class="split-image">
-            <img src="assets/emptyplace.jpg" alt="Empty Restaurant">
-        </div>
+    <div class="split-text">
+      <h2>Our Roots</h2>
+      <p>At Noorani, our name, in itself, carries the essence of our culinary palette. When breaking up our name, 'Noor' – means light, symbolizing the warmth and rich heritage that Indian and Middle Eastern bring to our table. Our exquisitely picked-out menu shines with bold flavors, fresh ingredients, and traditional food, bringing together two cultures and creating culinary excellence.</p>
+      <a href="our-roots.html" class="hero-button">Learn More</a>
+    </div>
+  </section>
 
-        <div class="split-text">
-            <h2>Our Roots</h2>
-            <p>At Noorani, our name, in itself, carries the essence of our culinary palette. When breaking up our name, ‘Noor’ – means light, symbolizing the warmth and rich heritage that Indian and Middle Eastern bring to our table. Our exquisitely picked-out menu shines with bold flavors, fresh ingredients, and traditional food, bringing together two cultures and creating culinary excellence.</p>
-            <a href="our-roots.html" class="hero-button">Learn More</a>
-        </div>
-    
-    </section>
+  <!-- Quote Over Video Section -->
+  <section class="quote-video-section">
+    <video autoplay muted loop playsinline>
+      <source src="assets/quotebg.mp4" type="video/mp4" />
+    </video>
+    <div class="quote-overlay">
+      <p class="quote-source">— Chef's Inspiration</p>
+      <h2 class="quote-text">"Where Flavor Meets Soul"</h2>
+      <a href="menu.html" class="quote-button">Explore Menu</a>
+    </div>
+  </section>
 
-    <!-- Quote Over Video Section -->
-
-
-    <section class="quote-video-section">
-        <video autoplay muted loop playsinline>
-            <source src="assets/quotebg.mp4" type="video/mp4" />
-        </video>
-        <div class="quote-overlay">
-            <p class="quote-source">— Chef's Inspiration</p>
-            <h2 class="quote-text">“Where Flavor Meets Soul”</h2>
-            <a href="menu.html" class="quote-button">Explore Menu</a>
-        </div>
-    </section>
-   <!-- Reviews Carousel -->
-   <section style="background-color: var(--light-cream);" class="py-16">
+  <!-- Reviews Carousel -->
+  <section style="background-color: var(--light-cream);" class="py-16">
     <div class="text-center mb-10">
-        <h2 class="text-4xl font-semibold text-[#093C34]">What Our Customers Are Saying</h2>
+      <h2 class="text-4xl font-semibold text-[#093C34]">What Our Customers Are Saying</h2>
     </div>
 
     <div class="carousel-wrapper relative max-w-6xl mx-auto px-16">
-        <!-- Arrows -->
-        <button id="prevBtn" class="carousel-arrow left">&#10094;</button>
+      <!-- Arrows -->
+      <button id="prevBtn" class="carousel-arrow left">&#10094;</button>
 
-        <!-- Slider Container -->
-        <div class="relative overflow-hidden">
-            <div id="carousel-track" class="flex transition-transform duration-500 ease-in-out space-x-6 touch-pan-x">
-                <!-- Review cards -->
-                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                    <p class="italic text-gray-700">"Absolutely love the ambiance and the flavors here! Noorani is our new favorite spot."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Sarah M.</p>
-                </div>
-                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                    <p class="italic text-gray-700">"The lamb biryani was full of flavor and the naan was fresh out the oven!"</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Jason R.</p>
-                </div>
-                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                    <p class="italic text-gray-700">"A fusion of cultures I didn’t know I needed. Beautiful decor and great music too."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Nadia K.</p>
-                </div>
-                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                    <p class="italic text-gray-700">"Amazing staff and top-notch service. Every dish is made with love."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">David P.</p>
-                </div>
-                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                    <p class="italic text-gray-700">"Every bite took me on a journey. Noorani is truly special."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Carlos M.</p>
-                </div>
-                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                    <p class="italic text-gray-700">"The interior is gorgeous, and their lamb samosas? *Chef’s kiss*."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Omar H.</p>
-                </div>
-            </div>
+      <!-- Slider Container -->
+      <div class="relative overflow-hidden">
+        <div id="carousel-track" class="flex transition-transform duration-500 ease-in-out space-x-6 touch-pan-x">
+          <!-- Review cards -->
+          <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+            <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+            <p class="italic text-gray-700">"Absolutely love the ambiance and the flavors here! Noorani is our new favorite spot."</p>
+            <p class="mt-4 text-[#093C34] font-semibold">Sarah M.</p>
+          </div>
+          <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+            <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+            <p class="italic text-gray-700">"The lamb biryani was full of flavor and the naan was fresh out the oven!"</p>
+            <p class="mt-4 text-[#093C34] font-semibold">Jason R.</p>
+          </div>
+          <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+            <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+            <p class="italic text-gray-700">"A fusion of cultures I didn't know I needed. Beautiful decor and great music too."</p>
+            <p class="mt-4 text-[#093C34] font-semibold">Nadia K.</p>
+          </div>
+          <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+            <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+            <p class="italic text-gray-700">"Amazing staff and top-notch service. Every dish is made with love."</p>
+            <p class="mt-4 text-[#093C34] font-semibold">David P.</p>
+          </div>
+          <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+            <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+            <p class="italic text-gray-700">"Every bite took me on a journey. Noorani is truly special."</p>
+            <p class="mt-4 text-[#093C34] font-semibold">Carlos M.</p>
+          </div>
+          <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+            <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+            <p class="italic text-gray-700">"The interior is gorgeous, and their lamb samosas? *Chef's kiss*."</p>
+            <p class="mt-4 text-[#093C34] font-semibold">Omar H.</p>
+          </div>
         </div>
+      </div>
 
-        <button id="nextBtn" class="carousel-arrow right">&#10095;</button>
-        <div id="carousel-dots" class="flex justify-center mt-6 gap-2"></div>
+      <button id="nextBtn" class="carousel-arrow right">&#10095;</button>
+      <div id="carousel-dots" class="flex justify-center mt-6 gap-2"></div>
     </div>
-</section>
+  </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="images/logowbackground.png" alt="Noorani Logo" class="logo-img">
-            </div>
-            <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">Menu</a>
-                <a href="farm-to-table.html">Farm-to-Table</a>
-                <a href="#our-roots">Our Roots</a>
-                <a href="#">Reserve</a>
-            </div>
-            <div class="socialMedia-container">
-                <a href="#"><img src="footer/facebook.png" alt="Facebook" class="social-icon"></a>
-                <a href="#"><img src="footer/instagram.png" alt="Instagram" class="social-icon"></a>
-                <a href="#"><img src="footer/youtube.png" alt="YouTube" class="social-icon"></a>
-                <a href="#"><img src="footer/email.png" alt="Email" class="social-icon"></a>
-            </div>
+  <!-- Redesigned Footer -->
+  <footer class="footer-new">
+    <div class="footer-container">
+      <!-- Column 1: Legal & Support -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Legal & Support</h3>
+        <ul class="footer-links-list">
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="contact.html">Support</a></li>
+        </ul>
+      </div>
+
+      <!-- Column 2: Subpages -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Discover</h3>
+        <ul class="footer-links-list">
+          <li><a href="#our-roots">Our Roots</a></li>
+          <li><a href="#">Sustainability</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Take Out</a></li>
+          <li><a href="#">Reserve</a></li>
+        </ul>
+      </div>
+
+      <!-- Column 3: Hours -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Hours</h3>
+        <ul class="footer-hours">
+          <li><span class="day">Monday - Thursday:</span> 11:00 AM - 10:00 PM</li>
+          <li><span class="day">Friday - Saturday:</span> 11:00 AM - 11:00 PM</li>
+          <li><span class="day">Sunday:</span> 12:00 PM - 9:00 PM</li>
+        </ul>
+      </div>
+
+      <!-- Column 4: Social Media -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Connect</h3>
+        <div class="social-icons">
+          <a href="#" class="social-icon"><img src="footer/facebook.png" alt="Facebook"></a>
+          <a href="#" class="social-icon"><img src="footer/instagram.png" alt="Instagram"></a>
+          <a href="#" class="social-icon"><img src="footer/youtube.png" alt="YouTube"></a>
+          <a href="#" class="social-icon"><img src="footer/email.png" alt="Email"></a>
         </div>
-        <p>© Noorani 2025. All rights reserved.</p>
-    </footer>
+        <a href="contact.html" class="contact-btn">Contact Us</a>
+      </div>
+    </div>
 
-    <script type="text/javascript" src="script.js"></script>
+    <div class="footer-bottom">
+      <p>© Noorani 2025. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
