--- a/index.html
+++ b/index.html
@@ -32,22 +32,23 @@
         </div>
     </section>
 
-    <!-- Navbar -->
-    <nav class="navbar">
-        <div class="logo-container" style="display: flex; align-items: center;">
-            <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
-            <div class="logo">Noorani</div>
-        </div>
-        <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">About</a>
-            <a href="#">Takeout</a>
-            <a href="#">Contact</a>
-            <a href="#our-roots">Our Roots</a>
-        </div>
-        <div class="menu-btn">&#9776;</div>
-    </nav>
+   <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo-container" style="display: flex; align-items: center;">
+      <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
+      <div class="logo">Noorani</div>
+    </div>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">Menu</a>
+      <a href="farm-to-table.html">Farm-to-Table</a>
+      <a href="#">About</a>
+      <a href="#">Takeout</a>
+      <a href="contact.html">Contact</a>
+      <a href="#our-roots">Our Roots</a>
+    </div>
+    <div class="menu-btn">&#9776;</div>
+  </nav>
 
     <!-- Split Layout Section -->
     <section class="split-section" id="our-roots">
@@ -74,7 +75,7 @@
     </section>
 
     <!-- Reviews Carousel -->
-    <section class="bg-[#fef6ed] py-16">
+    <section style="background-color: var(--light-cream);" class="py-16">
         <div class="text-center mb-10">
             <h2 class="text-4xl font-semibold text-[#093C34]">What Our Customers Are Saying</h2>
         </div>
@@ -94,7 +95,7 @@
                     </div>
                     <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
                         <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                        <p class="italic text-gray-700">"The lamb biryani was full of flavor and the naan was fresh out the oven!"</p>
+                        <p class="italic text-gray-700">"The falafel chaat was full of flavor and the naan was fresh out the oven!"</p>
                         <p class="mt-4 text-[#093C34] font-semibold">Jason R.</p>
                     </div>
                     <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
@@ -125,28 +126,60 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="images/logowbackground.png" alt="Noorani Logo" class="logo-img">
-            </div>
-            <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">Menu</a>
-                <a href="#our-roots">Our Roots</a>
-                <a href="#">Reserve</a>
-            </div>
-            <div class="socialMedia-container">
-                <a href="#"><img src="footer/facebook.png" alt="Facebook" class="social-icon"></a>
-                <a href="#"><img src="footer/instagram.png" alt="Instagram" class="social-icon"></a>
-                <a href="#"><img src="footer/youtube.png" alt="YouTube" class="social-icon"></a>
-                <a href="#"><img src="footer/email.png" alt="Email" class="social-icon"></a>
-            </div>
-        </div>
-        <p>© Noorani 2025. All rights reserved.</p>
-    </footer>
+    <!-- Redesigned Footer -->
+  <footer class="footer-new">
+    <div class="footer-container">
+      <!-- Column 1: Legal & Support -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Legal & Support</h3>
+        <ul class="footer-links-list">
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="contact.html">Support</a></li>
+        </ul>
+      </div>
 
-    <script type="text/javascript" src="script.js"></script>
+      <!-- Column 2: Subpages -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Discover</h3>
+        <ul class="footer-links-list">
+          <li><a href="#our-roots">Our Roots</a></li>
+          <li><a href="#">Sustainability</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Take Out</a></li>
+          <li><a href="#">Reserve</a></li>
+        </ul>
+      </div>
+
+      <!-- Column 3: Hours -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Hours</h3>
+        <ul class="footer-hours">
+          <li><span class="day">Monday - Thursday:</span> 11:00 AM - 10:00 PM</li>
+          <li><span class="day">Friday - Saturday:</span> 11:00 AM - 11:00 PM</li>
+          <li><span class="day">Sunday:</span> 12:00 PM - 9:00 PM</li>
+        </ul>
+      </div>
+
+      <!-- Column 4: Social Media -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Connect</h3>
+        <div class="social-icons">
+          <a href="#" class="social-icon"><img src="footer/facebook.png" alt="Facebook"></a>
+          <a href="#" class="social-icon"><img src="footer/instagram.png" alt="Instagram"></a>
+          <a href="#" class="social-icon"><img src="footer/youtube.png" alt="YouTube"></a>
+          <a href="#" class="social-icon"><img src="footer/email.png" alt="Email"></a>
+        </div>
+        <a href="contact.html" class="contact-btn">Contact Us</a>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>© Noorani 2025. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
