--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Noorani</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
-  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Favicon Links -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -30,13 +24,6 @@
         <source src="assets/homepage.mp4" type="video/mp4">
       </video>
     </div>
-  <!-- Video Background Section -->
-  <section class="hero-section">
-    <div class="video-container">
-      <video autoplay muted loop>
-        <source src="assets/homepage.mp4" type="video/mp4">
-      </video>
-    </div>
 
     <!-- Fading Text (Logo removed as requested) -->
     <div class="overlay">
@@ -44,14 +31,7 @@
       <p class="subtext fade-in-subtext">Where Every Bite is a Ray of Delight</p>
     </div>
   </section>
-    <!-- Fading Text (Logo removed as requested) -->
-    <div class="overlay">
-      <h1><span class="tropikal-font fade-in-title">Noorani</span></h1>
-      <p class="subtext fade-in-subtext">Where Every Bite is a Ray of Delight</p>
-    </div>
-  </section>
 
-  <!-- Navbar -->
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo-container" style="display: flex; align-items: center;">
@@ -110,32 +90,32 @@
                 <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
                     <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
                     <p class="italic text-gray-700">"Absolutely love the ambiance and the flavors here! Noorani is our new favorite spot."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Sarah M.</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">S.M.</p>
                 </div>
                 <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
                     <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
                     <p class="italic text-gray-700">"The falafel chaat was full of flavor and the naan was fresh out the oven!"</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Jason R.</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">J.R.</p>
                 </div>
                 <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
                     <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
                     <p class="italic text-gray-700">"A fusion of cultures I didn’t know I needed. Beautiful decor and great music too."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Nadia K.</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">N.K.</p>
                 </div>
                 <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
                     <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
                     <p class="italic text-gray-700">"Amazing staff and top-notch service. Every dish is made with love."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">David P.</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">D.P.</p>
                 </div>
                 <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
                     <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
                     <p class="italic text-gray-700">"Every bite took me on a journey. Noorani is truly special."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Carlos M.</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">C.M.</p>
                 </div>
                 <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
                     <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
                     <p class="italic text-gray-700">"The interior is gorgeous, and their lamb samosas? *Chef’s kiss*."</p>
-                    <p class="mt-4 text-[#093C34] font-semibold">Omar H.</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">O.H.</p>
                 </div>
             </div>
         </div>
