--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="farm-to-table.html">Farm-to-Table</a>
       <a href="#">Takeout</a>
       <a href="contactus.html">Contact</a>
-      <a href="#our-roots">Our Roots</a>
+      <a href="#our-roots.html">Our Roots</a>
     </div>
     <div class="menu-btn">&#9776;</div>
   </nav>
