work on this harshini

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </section>
 
-<<!-- Navigation Bar Update -->
+<!-- Navigation Bar Update -->
 <nav class="navbar">
   <div class="logo-container" style="display: flex; align-items: center;">
     <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
