--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       <div class="logo">Noorani</div>
     </div>
     <div class="nav-links">
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">Menu</a>
       <a href="farm-to-table.html">Farm-to-Table</a>
       <a href="#">Takeout</a>
       <a href="contactus.html">Contact</a>
-      <a href="#our-roots.html">Our Roots</a>
+      <a href="our-roots.html">Our Roots</a>
     </div>
     <div class="menu-btn">&#9776;</div>
   </nav>
