--- a/takeout.html
+++ b/takeout.html
@@ -13,12 +13,12 @@
   <section class="hero-section">
     <div class="video-container">
       <video autoplay muted loop>
-        <source src="assets/homepage.mp4" type="video/mp4">
+        <source src="assets/takeoutvideo.mp4" type="video/mp4">
       </video>
     </div>
     <div class="overlay">
-      <h1><span class="tropikal-font fade-in-title">Takeout</span></h1>
-      <!-- <p class="subtext fade-in-subtext">Where Every Bite is a Ray of Delight</p> -->
+      <h1><span class="tropikal-font fade-in-title">Place Order</span></h1>
+      <p class="subtext fade-in-subtext">Take Out and Delivery</p>
     </div>
   </section>
 
@@ -41,7 +41,7 @@
 
   <section class="py-20 bg-[var(--light-cream)] text-[var(--dark-green)]">
     <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-4xl font-bold text-center mb-10">Takeout Orders</h2>
+      <h2 class="text-4xl font-bold text-center mb-10">Place Order</h2>
   
       <!-- STEP 1: Menu Selection -->
       <form id="takeout-form" class="step" data-step="1">
