Save local changes before pulling

--- a/our-roots.html
+++ b/our-roots.html
@@ -15,21 +15,22 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 </head>
-    <nav class="navbar">
-        <div class="logo-container" style="display: flex; align-items: center;">
-            <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
-            <div class="logo">Noorani</div>
-        </div>
-        <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">About</a>
-            <a href="#">Takeout</a>
-            <a href="#">Contact</a>
-            <a href="#our-roots.html">Our Roots</a>
-        </div>
-        <div class="menu-btn">&#9776;</div>
-    </nav>
+    <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo-container" style="display: flex; align-items: center;">
+      <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
+      <div class="logo">Noorani</div>
+    </div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="menu.html">Menu</a>
+      <a href="farm-to-table.html">Farm-to-Table</a>
+      <a href="takeout.html">Takeout</a>
+      <a href="contactus.html">Contact</a>
+      <a href="#our-roots.html">Our Roots</a>
+    </div>
+    <div class="menu-btn">&#9776;</div>
+  </nav>
 
     <section id="roots" class="section">
         <div class="background-image" style="background-image: url('assets/header.jpg');"></div>
@@ -76,6 +77,60 @@
 
         </div>
     </section>
+
+ <!-- Redesigned Footer -->
+ <footer class="footer-new">
+    <div class="footer-container">
+      <!-- Column 1: Legal & Support -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Legal & Support</h3>
+        <ul class="footer-links-list">
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="contactus.html">Support</a></li>
+        </ul>
+      </div>
+
+      <!-- Column 2: Subpages -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Discover</h3>
+        <ul class="footer-links-list">
+          <li><a href="#our-roots">Our Roots</a></li>
+          <li><a href="#">Sustainability</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Take Out</a></li>
+          <li><a href="#">Reserve</a></li>
+        </ul>
+      </div>
+
+      <!-- Column 3: Hours -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Hours</h3>
+        <ul class="footer-hours">
+          <li><span class="day">Monday - Thursday:</span> 11:00 AM - 10:00 PM</li>
+          <li><span class="day">Friday - Saturday:</span> 11:00 AM - 11:00 PM</li>
+          <li><span class="day">Sunday:</span> 12:00 PM - 9:00 PM</li>
+        </ul>
+      </div>
+
+      <!-- Column 4: Social Media -->
+      <div class="footer-column">
+        <h3 class="footer-heading">Connect</h3>
+        <div class="social-icons">
+          <a href="#" class="social-icon"><img src="footer/facebook.png" alt="Facebook"></a>
+          <a href="#" class="social-icon"><img src="footer/instagram.png" alt="Instagram"></a>
+          <a href="#" class="social-icon"><img src="footer/youtube.png" alt="YouTube"></a>
+          <a href="#" class="social-icon"><img src="footer/email.png" alt="Email"></a>
+        </div>
+        <a href="contactus.html" class="contact-btn">Contact Us</a>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>© Noorani 2025. All rights reserved.</p>
+    </div>
+  </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
