fonts for homepage

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="split-text">
         <h2>Our Roots</h2>
         <p>At Noorani, our name, in itself, carries the essence of our culinary palette. When breaking up our name, ‘Noor’ – means light, symbolizing the warmth and rich heritage that Indian and Middle Eastern bring to our table. Our exquisitely picked-out menu shines with bold flavors, fresh ingredients, and traditional food, bringing together two cultures and creating culinary excellence.</p>
-        <a href="our-roots.html" class="hero-button">Learn More</a>
+        <br><a href="our-roots.html" class="hero-button">Learn More</a>
     </div>
 </section>
 
