--- a/contactus.html
+++ b/contactus.html
@@ -26,13 +26,11 @@
       </video>
     </div>
 <!-- Update in your contact page -->
-<div class="overlay">
-    <h1 class="contact-page-title">Contact Us</h1>
-    <p class="subtext fade-in-subtext">We'd love to hear from you</p>
-    <p class="tagline fade-in-subtext">Reach out for inquiries, reservations, or just to say hello</p>
-  </div>
-  </section>
-
+<div class="subpage-overlay">
+  <h1 class="subpage-title">Takeout</h1>
+  <p class="subpage-subtext">Order exquisite dishes right to your home</p>
+  <button class="scroll-down-btn">ORDER</button>
+</div>
 
 <!-- Navigation Bar Update -->
 <nav class="navbar" style="background-color: #093C34">
