--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
       <div class="footer-column">
         <h3 class="footer-heading">Legal & Support</h3>
         <ul class="footer-links-list">
-          <li><a href="#">Terms of Service</a></li>
-          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#" id="open-terms">Terms of Service</a></li>
+          <li><a href="#" id="open-privacy">Privacy Policy</a></li>
           <li><a href="contactus.html">Support</a></li>
         </ul>
       </div>
@@ -187,6 +187,28 @@
   </footer>
 
   <script type="text/javascript" src="script.js"></script>
+  <!-- Terms of Service Modal -->
+<div id="terms-modal" class="modal hidden">
+  <div class="modal-content">
+    <span class="modal-close" id="close-terms">&times;</span>
+    <h2><b>Terms of Service</b></h2>
+    <!-- <p><strong>Last updated:</strong> April 2, 2025</p> -->
+    <p>By using this site, you agree to these terms. Do not misuse the website or its content. Noorani owns all rights to materials displayed unless stated otherwise.</p>
+    <p>You must be of legal age to place orders or make reservations.</p>
+  </div>
+</div>
+
+<!-- Privacy Policy Modal -->
+<div id="privacy-modal" class="modal hidden">
+  <div class="modal-content">
+    <span class="modal-close" id="close-privacy">&times;</span>
+    <h2><b>Privacy Policy</b></h2>
+    <!-- <p><strong>Last updated:</strong> April 2, 2025</p> -->
+    <p>Noorani respects your privacy. We collect limited data for booking, support, and improving your experience. We do not share your personal data with third parties.</p>
+    <p>We use cookies for basic site functionality. Contact us for any questions.</p>
+  </div>
+</div>
+
 </body>
 
 </html>
