--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Mobile dropdown will be created by JavaScript -->
         <div class="absolute hidden peer-hover:flex group-hover:flex flex-col bg-white text-[#093C34] shadow-lg mt-1 rounded-lg overflow-hidden z-50 desktop-dropdown">
           <a href="sustainability.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Sustainability</a>
-          <a href="roots.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Our Roots</a>
+          <a href="our-roots.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Our Roots</a>
           <a href="farm-to-table.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Farm-to-Table</a>
           <a href="references.html" class="px-4 py-2 hover:bg-[#f3e2c4]">References</a>
         </div>
