--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
     <div class="footer-container">
       <!-- Column 1: Legal & Support -->
       <div class="footer-column">
-        <h3 class="footer-heading">Legal & Support</h3>
+        <h3 class="footer-heading">Legal & References</h3>
         <ul class="footer-links-list">
           <li><a href="#" id="open-terms">Terms of Service</a></li>
           <li><a href="#" id="open-privacy">Privacy Policy</a></li>
-          <li><a href="contactus.html">Support</a></li>
+          <li><a href="references.html">References</a></li>
         </ul>
       </div>
 
@@ -152,11 +152,11 @@
       <div class="footer-column">
         <h3 class="footer-heading">Discover</h3>
         <ul class="footer-links-list">
-          <li><a href="#our-roots">Our Roots</a></li>
-          <li><a href="#">Sustainability</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Take Out</a></li>
-          <li><a href="#">Reserve</a></li>
+          <li><a href="our-roots.html">Our Roots</a></li>
+          <li><a href="sustainability.html">Sustainability</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="takeout.html">Take Out</a></li>
+          <li><a href="reserve.html">Reserve</a></li>
         </ul>
       </div>
 
