--- a/takeout.html
+++ b/takeout.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[var(--light-cream)] text-[var(--dark-green)] loaded">
+<body>
 
   <!-- Hero Section -->
   <section class="hero-section">
@@ -18,11 +18,12 @@
     </div>
 
     <div class="subpage-overlay">
+      <div  class ="fade-in-element">
       <h1 class="subpage-title">Takeout</h1>
       <p class="subpage-subtext">Order exquisite dishes right to your home</p>
       <button class="scroll-down-btn">ORDER</button>
-
     </div>
+  </div>
   </section>
 
 
